--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
 		My current favourite song is 
-		<a href="https://youtu.be/fiQ2TSQ23Wo">Chandrayaan 3 launch</a>
+		<a href="https://youtu.be/X7WXHhokylc">Tere Vaaste</a>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
